Fix dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 :root {
-  /* ? ######## Colors */
   --color-default: #212529;
   --primary-hue: 0;
   --primary-saturation: 84%;
@@ -20,17 +19,14 @@
     var(--light-lightness)
   );
   --color-light-grey: #eee;
-  /* ? ######## Fonts */
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-primary: "Amatic SC", "sans-serif";
   --font-secondary: "Inter", "sans-serif";
-  /* ? ######## Animation options */
   --animation-duration: 400ms;
 }
 
-/*^============> Mode <============*/
 .mode-group i {
   cursor: pointer;
   font-size: 25px;
@@ -84,7 +80,7 @@ body:has(.mode:checked) .header-content p {
   color: var(--color-tertiary);
 }
 
-:root:has(.mode:checked) .chefs-cards .card picture:before {
+:root:has(.mode:checked) .chef-cards .card .image::before {
   background-image: url("../images/team-shape-dark.svg");
 }
 
